[package]
name = "aoc19"
version = "0.1.0"
authors = ["Olivier Pinon <oliv.pinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
pathfinding = "2.0"
itertools = "0.8.2"
rayon = "1.2.1"
recap = "0.1.1"
serde = "1.0.103"